--- a/app.html
+++ b/app.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>welcome to java world</title>
+    <title>welcome to java world tour</title>
 </head>
 <script>
     //alert("hellow world");
