--- a/vivek.html
+++ b/vivek.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>kjsjwkjdwoa;k</title>
+    <title>dynamic table with thread</title>
 </head>
 <body>
-    <h1>lkdpoisaj wjijdioq dniqjwiiqj</h1>
     
 </body>
 </html>
